--- a/portfolio_react/src/components/experience/Experience.scss
+++ b/portfolio_react/src/components/experience/Experience.scss
@@ -54,11 +54,15 @@
 
 // ================ SMALL DEVICES ================
 @media screen and (max-width: 600px) {
-    .experience__container{
-        gap: 1rem;
-    }
-    .experience__content > div{
-        width: 100%;
-        padding: 2rem 1rem;
+    .experience__container {
+        display: flex;
+        flex-direction: column;
+        & > div{
+            width: 100%;
+        }
+        .experience__content{
+            gap: 1rem;
+            padding: 0;
+        }
     }
 }
