--- a/portfolio_react/src/components/services/Services.scss
+++ b/portfolio_react/src/components/services/Services.scss
@@ -43,6 +43,7 @@
     }
 }
 
+// ================ MEDIUM DEVICES ================
 @media screen and (max-width: 1200px) {
     .services__container{
         display: grid;
