feat: add testomonial component

--- a/portfolio_react/src/components/testimonials/Testimonials.scss
+++ b/portfolio_react/src/components/testimonials/Testimonials.scss
@@ -1,6 +1,7 @@
 .container.testimonials__container{
     overflow: hidden;
     width: 35%;
+    padding-bottom: 4rem;
     .client__avatar{
         width: 4rem;
         aspect-ratio: 1/1;
