feat: change height of card

--- a/portfolio_react/src/components/testimonials/Testimonials.scss
+++ b/portfolio_react/src/components/testimonials/Testimonials.scss
@@ -11,6 +11,7 @@
         border: 0.4rem solid var(--color-primary-variant);
     }
     .testimonial{
+        height: auto;
         background: var(--color-bg-variant);
         text-align: center;
         padding: 3rem;
