feat: add footer component

--- a/portfolio_react/src/components/testimonials/Testimonials.scss
+++ b/portfolio_react/src/components/testimonials/Testimonials.scss
@@ -2,6 +2,7 @@
     overflow: hidden;
     width: 35%;
     padding-bottom: 4rem;
+    z-index: 0;
     .client__avatar{
         width: 5rem;
         aspect-ratio: 1/1;
