--- a/portfolio_react/src/components/contact/Contact.scss
+++ b/portfolio_react/src/components/contact/Contact.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
-    width: 80%;
+    width: 250px;
     .contact__option {
         background: var(--color-bg-variant);
         padding: 1.2rem;
@@ -71,6 +71,7 @@ form{
 
     .contact__options{
         justify-self: center;
+        width: 70%;
     } 
   }
   
