--- a/portfolio_react/src/components/nav/Nav.scss
+++ b/portfolio_react/src/components/nav/Nav.scss
@@ -3,7 +3,7 @@ nav {
     width: max-content;
     display: block;
     padding: 0.7rem 1.7rem;
-    z-index: 2;
+    z-index: 1;
     position: fixed;
     bottom: 2rem;
     left: 50%;
@@ -41,3 +41,11 @@ nav {
         background: var(--color-bg);
     }
 }
+
+.hidden{
+        position: static;
+        display: none;
+    }
+    .fixed{
+        position: fixed;
+    }
