feat: add scroll style

--- a/portfolio_react/src/components/header/Header.scss
+++ b/portfolio_react/src/components/header/Header.scss
@@ -50,6 +50,7 @@ header{
     transform: rotate(90deg);
     font-weight: 300;
     font-size: 0.9rem;
+    cursor: pointer;
 }
 
 // ================ MEDIUM DEVICES ================
