--- a/portfolio_react/src/components/nav/Nav.scss
+++ b/portfolio_react/src/components/nav/Nav.scss
@@ -12,6 +12,7 @@ nav {
     gap: 0.8rem;
     border-radius: 3rem;
     backdrop-filter: blur(15px);
+    cursor: pointer;
 
     a {
         position: relative;
@@ -22,6 +23,7 @@ nav {
         color: var(--color-light);
         font-size: 1.1rem;
         transition: all 0.5s;
+
 
         &:hover {
             background: rgba(0, 0, 0, 0.3);
