--- a/portfolio_react/src/components/footer/Footer.scss
+++ b/portfolio_react/src/components/footer/Footer.scss
@@ -2,7 +2,6 @@ footer{
     background: var(--color-primary);
     position: relative;
     padding: 1rem 0;
-    z-index: 2;
     text-align: center;
     font-size: 0.9rem;
     margin-top: 7rem;
@@ -23,6 +22,7 @@ footer{
         justify-content: center;
         gap: 2rem;
         margin: 0 auto 3rem;
+        cursor: pointer;
     }
 
     .footer__socials{
